# docs/swagger.json
@@ -841,126 +841,6 @@
                 }
             }
         },
-        "/payment-service/api/v1/payments/callback-cancel": {
-            "get": {
-                "description": "Handles redirect or callback after canceled payment",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "payments"
-                ],
-                "summary": "Callback after canceled payment",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "Customer ID",
-                        "name": "customerId",
-                        "in": "query",
-                        "required": true
-                    },
-                    {
-                        "type": "integer",
-                        "description": "Account ID",
-                        "name": "accountId",
-                        "in": "query",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Payment Method",
-                        "name": "paymentMethod",
-                        "in": "query",
-                        "required": true
-                    },
-                    {
-                        "type": "number",
-                        "description": "Price of the transaction",
-                        "name": "price",
-                        "in": "query",
-                        "required": true
-                    },
-                    {
-                        "type": "integer",
-                        "description": "Order Code",
-                        "name": "orderCode",
-                        "in": "query",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "400": {
-                        "description": "Invalid data. Please try again.",
-                        "schema": {
-                            "$ref": "#/definitions/response.MessageApiResponse"
-                        }
-                    }
-                }
-            }
-        },
-        "/payment-service/api/v1/payments/callback-success": {
-            "get": {
-                "description": "Handles redirect or callback after successful payment",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "payments"
-                ],
-                "summary": "Callback after successful payment",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "Customer ID",
-                        "name": "customerId",
-                        "in": "query",
-                        "required": true
-                    },
-                    {
-                        "type": "integer",
-                        "description": "Account ID",
-                        "name": "accountId",
-                        "in": "query",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Payment Method",
-                        "name": "paymentMethod",
-                        "in": "query",
-                        "required": true
-                    },
-                    {
-                        "type": "number",
-                        "description": "Price of the transaction",
-                        "name": "price",
-                        "in": "query",
-                        "required": true
-                    },
-                    {
-                        "type": "integer",
-                        "description": "Order Code",
-                        "name": "orderCode",
-                        "in": "query",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "400": {
-                        "description": "Invalid data. Please try again.",
-                        "schema": {
-                            "$ref": "#/definitions/response.MessageApiResponse"
-                        }
-                    }
-                }
-            }
-        },
         "/payment-service/api/v1/payments/create": {
             "post": {
                 "security": [
@@ -968,7 +848,7 @@
                         "BearerAuth": []
                     }
                 ],
-                "description": "Creates a new payment and returns redirect info or confirmation",
+                "description": "Creates a new payment",
                 "consumes": [
                     "application/json"
                 ],
@@ -992,9 +872,9 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "OK",
+                        "description": "success",
                         "schema": {
-                            "$ref": "#/definitions/response.UrlResponse"
+                            "$ref": "#/definitions/response.MessageApiResponse"
                         }
                     },
                     "400": {
@@ -1011,6 +891,46 @@
                     },
                     "500": {
                         "description": "There is something wrong in the system during the process. Please try again later.",
+                        "schema": {
+                            "$ref": "#/definitions/response.MessageApiResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/payment-service/api/v1/payments/create-embeded-payment-link": {
+            "post": {
+                "description": "Initiates a PayOS transaction with the given request body",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "payments"
+                ],
+                "summary": "Create a PayOS Transaction",
+                "parameters": [
+                    {
+                        "description": "PayOS Transaction Request",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/request.CreatePayosTransactionRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.UrlResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid data. Please try again.",
                         "schema": {
                             "$ref": "#/definitions/response.MessageApiResponse"
                         }
@@ -1252,13 +1172,13 @@
         "entity.Payment": {
             "type": "object",
             "properties": {
-                "accountId": {
-                    "type": "integer"
-                },
                 "createdAt": {
                     "type": "string"
                 },
                 "customerId": {
+                    "type": "integer"
+                },
+                "invoiceId": {
                     "type": "integer"
                 },
                 "paymentId": {
@@ -1270,6 +1190,13 @@
                 },
                 "price": {
                     "type": "number"
+                },
+                "serviceId": {
+                    "type": "integer"
+                },
+                "status": {
+                    "description": "e.g., \"paid\", \"unpaid\", \"pending\"",
+                    "type": "string"
                 }
             }
         },
@@ -1328,7 +1255,8 @@
                     "type": "integer"
                 },
                 "rating": {
-                    "type": "integer"
+                    "type": "integer",
+                    "maximum": 5
                 },
                 "serviceId": {
                     "type": "integer"
@@ -1341,16 +1269,17 @@
         "request.CreatePaymentRequest": {
             "type": "object",
             "required": [
-                "accountId",
                 "customerId",
+                "invoiceId",
                 "paymentMethod",
-                "price"
+                "price",
+                "serviceId"
             ],
             "properties": {
-                "accountId": {
+                "customerId": {
                     "type": "integer"
                 },
-                "customerId": {
+                "invoiceId": {
                     "type": "integer"
                 },
                 "paymentMethod": {
@@ -1358,6 +1287,24 @@
                 },
                 "price": {
                     "type": "number"
+                },
+                "serviceId": {
+                    "type": "integer"
+                }
+            }
+        },
+        "request.CreatePayosTransactionRequest": {
+            "type": "object",
+            "required": [
+                "amount",
+                "invoiceId"
+            ],
+            "properties": {
+                "amount": {
+                    "type": "number"
+                },
+                "invoiceId": {
+                    "type": "integer"
                 }
             }
         },
@@ -1405,7 +1352,8 @@
                     "type": "string"
                 },
                 "rating": {
-                    "type": "integer"
+                    "type": "integer",
+                    "maximum": 5
                 },
                 "request": {
                     "$ref": "#/definitions/request.RemoveFeedbackRequest"
