# infrastructure/grpc/user/pb/user.pb.go
@@ -2,7 +2,7 @@
 // versions:
 // 	protoc-gen-go v1.35.1
 // 	protoc        v5.28.3
-// source: infrastructure/grpc/user/pb/user.proto
+// source: user.proto
 
 package pb
 
@@ -20,30 +20,29 @@ const (
 	_ = protoimpl.EnforceVersion(protoimpl.MaxVersion - 20)
 )
 
-// Request message with user ID
-type GetUserRequest struct {
+type GetCustomerByIdRequest struct {
 	state         protoimpl.MessageState
 	sizeCache     protoimpl.SizeCache
 	unknownFields protoimpl.UnknownFields
 
-	Id int32 `protobuf:"varint,1,opt,name=id,proto3" json:"id,omitempty"`
+	CustomerId int32 `protobuf:"varint,1,opt,name=customerId,proto3" json:"customerId,omitempty"`
 }
 
-func (x *GetUserRequest) Reset() {
-	*x = GetUserRequest{}
-	mi := &file_infrastructure_grpc_user_pb_user_proto_msgTypes[0]
+func (x *GetCustomerByIdRequest) Reset() {
+	*x = GetCustomerByIdRequest{}
+	mi := &file_user_proto_msgTypes[0]
 	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
 	ms.StoreMessageInfo(mi)
 }
 
-func (x *GetUserRequest) String() string {
+func (x *GetCustomerByIdRequest) String() string {
 	return protoimpl.X.MessageStringOf(x)
 }
 
-func (*GetUserRequest) ProtoMessage() {}
+func (*GetCustomerByIdRequest) ProtoMessage() {}
 
-func (x *GetUserRequest) ProtoReflect() protoreflect.Message {
-	mi := &file_infrastructure_grpc_user_pb_user_proto_msgTypes[0]
+func (x *GetCustomerByIdRequest) ProtoReflect() protoreflect.Message {
+	mi := &file_user_proto_msgTypes[0]
 	if x != nil {
 		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
 		if ms.LoadMessageInfo() == nil {
@@ -54,45 +53,46 @@ func (x *GetUserRequest) ProtoReflect() protoreflect.Message {
 	return mi.MessageOf(x)
 }
 
-// Deprecated: Use GetUserRequest.ProtoReflect.Descriptor instead.
-func (*GetUserRequest) Descriptor() ([]byte, []int) {
-	return file_infrastructure_grpc_user_pb_user_proto_rawDescGZIP(), []int{0}
+// Deprecated: Use GetCustomerByIdRequest.ProtoReflect.Descriptor instead.
+func (*GetCustomerByIdRequest) Descriptor() ([]byte, []int) {
+	return file_user_proto_rawDescGZIP(), []int{0}
 }
 
-func (x *GetUserRequest) GetId() int32 {
+func (x *GetCustomerByIdRequest) GetCustomerId() int32 {
 	if x != nil {
-		return x.Id
+		return x.CustomerId
 	}
 	return 0
 }
 
-// User message
-type User struct {
+type CustomerResponse struct {
 	state         protoimpl.MessageState
 	sizeCache     protoimpl.SizeCache
 	unknownFields protoimpl.UnknownFields
 
-	Id       int32  `protobuf:"varint,1,opt,name=id,proto3" json:"id,omitempty"`
-	Fullname string `protobuf:"bytes,2,opt,name=fullname,proto3" json:"fullname,omitempty"`
-	Email    string `protobuf:"bytes,3,opt,name=email,proto3" json:"email,omitempty"`
-	Image    string `protobuf:"bytes,4,opt,name=image,proto3" json:"image,omitempty"`
+	CustomerId int32  `protobuf:"varint,1,opt,name=customerId,proto3" json:"customerId,omitempty"`
+	FullName   string `protobuf:"bytes,2,opt,name=fullName,proto3" json:"fullName,omitempty"`
+	Image      string `protobuf:"bytes,3,opt,name=image,proto3" json:"image,omitempty"`
+	Gender     string `protobuf:"bytes,4,opt,name=gender,proto3" json:"gender,omitempty"`
+	Phone      string `protobuf:"bytes,5,opt,name=phone,proto3" json:"phone,omitempty"`
+	Email      string `protobuf:"bytes,6,opt,name=email,proto3" json:"email,omitempty"`
 }
 
-func (x *User) Reset() {
-	*x = User{}
-	mi := &file_infrastructure_grpc_user_pb_user_proto_msgTypes[1]
+func (x *CustomerResponse) Reset() {
+	*x = CustomerResponse{}
+	mi := &file_user_proto_msgTypes[1]
 	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
 	ms.StoreMessageInfo(mi)
 }
 
-func (x *User) String() string {
+func (x *CustomerResponse) String() string {
 	return protoimpl.X.MessageStringOf(x)
 }
 
-func (*User) ProtoMessage() {}
+func (*CustomerResponse) ProtoMessage() {}
 
-func (x *User) ProtoReflect() protoreflect.Message {
-	mi := &file_infrastructure_grpc_user_pb_user_proto_msgTypes[1]
+func (x *CustomerResponse) ProtoReflect() protoreflect.Message {
+	mi := &file_user_proto_msgTypes[1]
 	if x != nil {
 		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
 		if ms.LoadMessageInfo() == nil {
@@ -103,80 +103,100 @@ func (x *User) ProtoReflect() protoreflect.Message {
 	return mi.MessageOf(x)
 }
 
-// Deprecated: Use User.ProtoReflect.Descriptor instead.
-func (*User) Descriptor() ([]byte, []int) {
-	return file_infrastructure_grpc_user_pb_user_proto_rawDescGZIP(), []int{1}
+// Deprecated: Use CustomerResponse.ProtoReflect.Descriptor instead.
+func (*CustomerResponse) Descriptor() ([]byte, []int) {
+	return file_user_proto_rawDescGZIP(), []int{1}
 }
 
-func (x *User) GetId() int32 {
+func (x *CustomerResponse) GetCustomerId() int32 {
 	if x != nil {
-		return x.Id
+		return x.CustomerId
 	}
 	return 0
 }
 
-func (x *User) GetFullname() string {
+func (x *CustomerResponse) GetFullName() string {
 	if x != nil {
-		return x.Fullname
+		return x.FullName
 	}
 	return ""
 }
 
-func (x *User) GetEmail() string {
-	if x != nil {
-		return x.Email
-	}
-	return ""
-}
-
-func (x *User) GetImage() string {
+func (x *CustomerResponse) GetImage() string {
 	if x != nil {
 		return x.Image
 	}
 	return ""
 }
 
-var File_infrastructure_grpc_user_pb_user_proto protoreflect.FileDescriptor
+func (x *CustomerResponse) GetGender() string {
+	if x != nil {
+		return x.Gender
+	}
+	return ""
+}
 
-var file_infrastructure_grpc_user_pb_user_proto_rawDesc = []byte{
-	0x0a, 0x26, 0x69, 0x6e, 0x66, 0x72, 0x61, 0x73, 0x74, 0x72, 0x75, 0x63, 0x74, 0x75, 0x72, 0x65,
-	0x2f, 0x67, 0x72, 0x70, 0x63, 0x2f, 0x75, 0x73, 0x65, 0x72, 0x2f, 0x70, 0x62, 0x2f, 0x75, 0x73,
-	0x65, 0x72, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x12, 0x02, 0x70, 0x62, 0x22, 0x20, 0x0a, 0x0e,
-	0x47, 0x65, 0x74, 0x55, 0x73, 0x65, 0x72, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x12, 0x0e,
-	0x0a, 0x02, 0x69, 0x64, 0x18, 0x01, 0x20, 0x01, 0x28, 0x05, 0x52, 0x02, 0x69, 0x64, 0x22, 0x5e,
-	0x0a, 0x04, 0x55, 0x73, 0x65, 0x72, 0x12, 0x0e, 0x0a, 0x02, 0x69, 0x64, 0x18, 0x01, 0x20, 0x01,
-	0x28, 0x05, 0x52, 0x02, 0x69, 0x64, 0x12, 0x1a, 0x0a, 0x08, 0x66, 0x75, 0x6c, 0x6c, 0x6e, 0x61,
-	0x6d, 0x65, 0x18, 0x02, 0x20, 0x01, 0x28, 0x09, 0x52, 0x08, 0x66, 0x75, 0x6c, 0x6c, 0x6e, 0x61,
-	0x6d, 0x65, 0x12, 0x14, 0x0a, 0x05, 0x65, 0x6d, 0x61, 0x69, 0x6c, 0x18, 0x03, 0x20, 0x01, 0x28,
-	0x09, 0x52, 0x05, 0x65, 0x6d, 0x61, 0x69, 0x6c, 0x12, 0x14, 0x0a, 0x05, 0x69, 0x6d, 0x61, 0x67,
-	0x65, 0x18, 0x04, 0x20, 0x01, 0x28, 0x09, 0x52, 0x05, 0x69, 0x6d, 0x61, 0x67, 0x65, 0x32, 0x36,
-	0x0a, 0x0b, 0x55, 0x73, 0x65, 0x72, 0x53, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x12, 0x27, 0x0a,
-	0x07, 0x47, 0x65, 0x74, 0x55, 0x73, 0x65, 0x72, 0x12, 0x12, 0x2e, 0x70, 0x62, 0x2e, 0x47, 0x65,
-	0x74, 0x55, 0x73, 0x65, 0x72, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x08, 0x2e, 0x70,
-	0x62, 0x2e, 0x55, 0x73, 0x65, 0x72, 0x42, 0x05, 0x5a, 0x03, 0x70, 0x62, 0x2f, 0x62, 0x06, 0x70,
-	0x72, 0x6f, 0x74, 0x6f, 0x33,
+func (x *CustomerResponse) GetPhone() string {
+	if x != nil {
+		return x.Phone
+	}
+	return ""
+}
+
+func (x *CustomerResponse) GetEmail() string {
+	if x != nil {
+		return x.Email
+	}
+	return ""
+}
+
+var File_user_proto protoreflect.FileDescriptor
+
+var file_user_proto_rawDesc = []byte{
+	0x0a, 0x0a, 0x75, 0x73, 0x65, 0x72, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x12, 0x02, 0x70, 0x62,
+	0x22, 0x38, 0x0a, 0x16, 0x47, 0x65, 0x74, 0x43, 0x75, 0x73, 0x74, 0x6f, 0x6d, 0x65, 0x72, 0x42,
+	0x79, 0x49, 0x64, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x12, 0x1e, 0x0a, 0x0a, 0x63, 0x75,
+	0x73, 0x74, 0x6f, 0x6d, 0x65, 0x72, 0x49, 0x64, 0x18, 0x01, 0x20, 0x01, 0x28, 0x05, 0x52, 0x0a,
+	0x63, 0x75, 0x73, 0x74, 0x6f, 0x6d, 0x65, 0x72, 0x49, 0x64, 0x22, 0xa8, 0x01, 0x0a, 0x10, 0x43,
+	0x75, 0x73, 0x74, 0x6f, 0x6d, 0x65, 0x72, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x12,
+	0x1e, 0x0a, 0x0a, 0x63, 0x75, 0x73, 0x74, 0x6f, 0x6d, 0x65, 0x72, 0x49, 0x64, 0x18, 0x01, 0x20,
+	0x01, 0x28, 0x05, 0x52, 0x0a, 0x63, 0x75, 0x73, 0x74, 0x6f, 0x6d, 0x65, 0x72, 0x49, 0x64, 0x12,
+	0x1a, 0x0a, 0x08, 0x66, 0x75, 0x6c, 0x6c, 0x4e, 0x61, 0x6d, 0x65, 0x18, 0x02, 0x20, 0x01, 0x28,
+	0x09, 0x52, 0x08, 0x66, 0x75, 0x6c, 0x6c, 0x4e, 0x61, 0x6d, 0x65, 0x12, 0x14, 0x0a, 0x05, 0x69,
+	0x6d, 0x61, 0x67, 0x65, 0x18, 0x03, 0x20, 0x01, 0x28, 0x09, 0x52, 0x05, 0x69, 0x6d, 0x61, 0x67,
+	0x65, 0x12, 0x16, 0x0a, 0x06, 0x67, 0x65, 0x6e, 0x64, 0x65, 0x72, 0x18, 0x04, 0x20, 0x01, 0x28,
+	0x09, 0x52, 0x06, 0x67, 0x65, 0x6e, 0x64, 0x65, 0x72, 0x12, 0x14, 0x0a, 0x05, 0x70, 0x68, 0x6f,
+	0x6e, 0x65, 0x18, 0x05, 0x20, 0x01, 0x28, 0x09, 0x52, 0x05, 0x70, 0x68, 0x6f, 0x6e, 0x65, 0x12,
+	0x14, 0x0a, 0x05, 0x65, 0x6d, 0x61, 0x69, 0x6c, 0x18, 0x06, 0x20, 0x01, 0x28, 0x09, 0x52, 0x05,
+	0x65, 0x6d, 0x61, 0x69, 0x6c, 0x32, 0x52, 0x0a, 0x0b, 0x55, 0x73, 0x65, 0x72, 0x53, 0x65, 0x72,
+	0x76, 0x69, 0x63, 0x65, 0x12, 0x43, 0x0a, 0x0f, 0x47, 0x65, 0x74, 0x43, 0x75, 0x73, 0x74, 0x6f,
+	0x6d, 0x65, 0x72, 0x42, 0x79, 0x49, 0x64, 0x12, 0x1a, 0x2e, 0x70, 0x62, 0x2e, 0x47, 0x65, 0x74,
+	0x43, 0x75, 0x73, 0x74, 0x6f, 0x6d, 0x65, 0x72, 0x42, 0x79, 0x49, 0x64, 0x52, 0x65, 0x71, 0x75,
+	0x65, 0x73, 0x74, 0x1a, 0x14, 0x2e, 0x70, 0x62, 0x2e, 0x43, 0x75, 0x73, 0x74, 0x6f, 0x6d, 0x65,
+	0x72, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x42, 0x05, 0x5a, 0x03, 0x70, 0x62, 0x2f,
+	0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
 }
 
 var (
-	file_infrastructure_grpc_user_pb_user_proto_rawDescOnce sync.Once
-	file_infrastructure_grpc_user_pb_user_proto_rawDescData = file_infrastructure_grpc_user_pb_user_proto_rawDesc
+	file_user_proto_rawDescOnce sync.Once
+	file_user_proto_rawDescData = file_user_proto_rawDesc
 )
 
-func file_infrastructure_grpc_user_pb_user_proto_rawDescGZIP() []byte {
-	file_infrastructure_grpc_user_pb_user_proto_rawDescOnce.Do(func() {
-		file_infrastructure_grpc_user_pb_user_proto_rawDescData = protoimpl.X.CompressGZIP(file_infrastructure_grpc_user_pb_user_proto_rawDescData)
+func file_user_proto_rawDescGZIP() []byte {
+	file_user_proto_rawDescOnce.Do(func() {
+		file_user_proto_rawDescData = protoimpl.X.CompressGZIP(file_user_proto_rawDescData)
 	})
-	return file_infrastructure_grpc_user_pb_user_proto_rawDescData
+	return file_user_proto_rawDescData
 }
 
-var file_infrastructure_grpc_user_pb_user_proto_msgTypes = make([]protoimpl.MessageInfo, 2)
-var file_infrastructure_grpc_user_pb_user_proto_goTypes = []any{
-	(*GetUserRequest)(nil), // 0: pb.GetUserRequest
-	(*User)(nil),           // 1: pb.User
+var file_user_proto_msgTypes = make([]protoimpl.MessageInfo, 2)
+var file_user_proto_goTypes = []any{
+	(*GetCustomerByIdRequest)(nil), // 0: pb.GetCustomerByIdRequest
+	(*CustomerResponse)(nil),       // 1: pb.CustomerResponse
 }
-var file_infrastructure_grpc_user_pb_user_proto_depIdxs = []int32{
-	0, // 0: pb.UserService.GetUser:input_type -> pb.GetUserRequest
-	1, // 1: pb.UserService.GetUser:output_type -> pb.User
+var file_user_proto_depIdxs = []int32{
+	0, // 0: pb.UserService.GetCustomerById:input_type -> pb.GetCustomerByIdRequest
+	1, // 1: pb.UserService.GetCustomerById:output_type -> pb.CustomerResponse
 	1, // [1:2] is the sub-list for method output_type
 	0, // [0:1] is the sub-list for method input_type
 	0, // [0:0] is the sub-list for extension type_name
@@ -184,27 +204,27 @@ var file_infrastructure_grpc_user_pb_user_proto_depIdxs = []int32{
 	0, // [0:0] is the sub-list for field type_name
 }
 
-func init() { file_infrastructure_grpc_user_pb_user_proto_init() }
-func file_infrastructure_grpc_user_pb_user_proto_init() {
-	if File_infrastructure_grpc_user_pb_user_proto != nil {
+func init() { file_user_proto_init() }
+func file_user_proto_init() {
+	if File_user_proto != nil {
 		return
 	}
 	type x struct{}
 	out := protoimpl.TypeBuilder{
 		File: protoimpl.DescBuilder{
 			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
-			RawDescriptor: file_infrastructure_grpc_user_pb_user_proto_rawDesc,
+			RawDescriptor: file_user_proto_rawDesc,
 			NumEnums:      0,
 			NumMessages:   2,
 			NumExtensions: 0,
 			NumServices:   1,
 		},
-		GoTypes:           file_infrastructure_grpc_user_pb_user_proto_goTypes,
-		DependencyIndexes: file_infrastructure_grpc_user_pb_user_proto_depIdxs,
-		MessageInfos:      file_infrastructure_grpc_user_pb_user_proto_msgTypes,
+		GoTypes:           file_user_proto_goTypes,
+		DependencyIndexes: file_user_proto_depIdxs,
+		MessageInfos:      file_user_proto_msgTypes,
 	}.Build()
-	File_infrastructure_grpc_user_pb_user_proto = out.File
-	file_infrastructure_grpc_user_pb_user_proto_rawDesc = nil
-	file_infrastructure_grpc_user_pb_user_proto_goTypes = nil
-	file_infrastructure_grpc_user_pb_user_proto_depIdxs = nil
+	File_user_proto = out.File
+	file_user_proto_rawDesc = nil
+	file_user_proto_goTypes = nil
+	file_user_proto_depIdxs = nil
 }
